Move file loader to GraffitiManager