@@ -14,12 +14,13 @@
 package tech.pegasys.teku.validator.api;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Optional;
-import java.util.function.Supplier;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.apache.tuweni.bytes.Bytes32;
 import tech.pegasys.teku.bls.BLSPublicKey;
 import tech.pegasys.teku.service.serviceutils.layout.DataDirLayout;
 
@@ -34,11 +35,11 @@ public class GraffitiManager {
   }
 
   public Optional<String> setGraffiti(final BLSPublicKey publicKey, final String graffiti) {
-    return updateGraffiti(publicKey, () -> Bytes32Parser.toBytes32(graffiti).toArray());
+    return updateGraffiti(publicKey, graffiti.strip());
   }
 
   public Optional<String> deleteGraffiti(final BLSPublicKey publicKey) {
-    return updateGraffiti(publicKey, () -> new byte[0]);
+    return updateGraffiti(publicKey);
   }
 
   private Optional<Path> createManagementDirectory(final DataDirLayout dataDirLayout) {
@@ -52,15 +53,26 @@ public class GraffitiManager {
     return Optional.of(graffitiDirectory);
   }
 
-  private Optional<String> updateGraffiti(
-      final BLSPublicKey publicKey, final Supplier<byte[]> graffiti) {
+  private Optional<String> updateGraffiti(final BLSPublicKey publicKey) {
+    return updateGraffiti(publicKey, "");
+  }
+
+  private Optional<String> updateGraffiti(final BLSPublicKey publicKey, final String graffiti) {
     if (graffitiPath.isEmpty()) {
       return Optional.of(GRAFFITI_DIR + " directory does not exist to handle update.");
     }
 
+    final int graffitiSize = graffiti.getBytes(StandardCharsets.UTF_8).length;
+    if (graffitiSize > 32) {
+      return Optional.of(
+          String.format(
+              "'%s' converts to %s bytes. Input must be 32 bytes or less.",
+              graffiti, graffitiSize));
+    }
+
     try {
       final Path file = graffitiPath.get().resolve(resolveFileName(publicKey));
-      Files.write(file, graffiti.get());
+      Files.writeString(file, graffiti);
     } catch (IOException e) {
       final String errorMessage =
           String.format("Unable to update graffiti for validator %s", publicKey);
@@ -70,7 +82,27 @@ public class GraffitiManager {
     return Optional.empty();
   }
 
-  static String resolveFileName(final BLSPublicKey publicKey) {
+  public Optional<Bytes32> getGraffitiFromStorage(final BLSPublicKey publicKey) {
+    if (graffitiPath.isEmpty()) {
+      LOG.error(GRAFFITI_DIR + " directory does not exist to get graffiti from storage.");
+      return Optional.empty();
+    }
+
+    final Path filePath = graffitiPath.get().resolve(resolveFileName(publicKey));
+    try {
+      return Optional.of(GraffitiParser.loadFromFile(filePath)).filter(this::graffitiNotEmpty);
+    } catch (GraffitiLoaderException | IllegalArgumentException e) {
+      LOG.error("Unable to read graffiti from storage.", e);
+      return Optional.empty();
+    }
+  }
+
+  private boolean graffitiNotEmpty(final Bytes32 graffiti) {
+    final Bytes32 emptyBytesParsed = Bytes32Parser.toBytes32(new byte[0]);
+    return !graffiti.equals(emptyBytesParsed);
+  }
+
+  private String resolveFileName(final BLSPublicKey publicKey) {
     return publicKey.toSSZBytes().toUnprefixedHexString() + ".txt";
   }
 }
